--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.23.0",
+    "mustache": "^3.0.1",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
